app/assets/stylesheets/bootstrap_and_customization.css.scss
@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,700italic,700|Clicker+Script|Kaushan+Script|News+Cycle:400,700|BenchNine|Poiret+One|Open+Sans+Condensed:300|Playball|Shadows+Into+Light+Two);

$phill-grn: #3f8000;
$phill-gold: #ffef19;
$phill-blu: #e3f5fa;
$phill-blu-light: #ebf7fa;
$phill-orange-beta: #f87c6c;
$nav-pills-border-radius: 0em;
$nav-pills-active-link-hover-bg: $phill-grn;
$nav-link-hover-bg: $phill-gold;
$font-family-sans-serif: 'News Cycle', 'Roboto';
$link-color: $phill-grn;

$list-group-link-color: white;
$list-group-link-hover-color: $phill-grn;
$list-group-hover-bg: $phill-gold;
$list-group-border: white;

$badge-color: $phill-gold;
$badge-bg: transparent;
$list-group-bg: $phill-grn;
$badge-border-radius: 50%;
$badge-link-hover-color: $phill-grn;


@import 'bootstrap';
@import 'NEW';

.justify {
    text-align: justify;
}

.center {
    text-align: center;
}

.right {
    text-align: right;
}

.script {
    font-family: 'Shadows Into Light Two';
}

.section-title {
    font-family: 'Shadows Into Light Two', 'Playball', 'Open Sans Condensed', 'Poiret One', 'BenchNine', 'Kaushan Script', 'Clicker Script';
    font-size: 55px;
    text-align: center;
    color: white;
    background: $phill-grn;
    opacity: 0.9;
    float: right;
    padding: 12px 0 0 12px;
    border-radius: 2px;
    width: 100%;
}

.section-title-small {
    @extend .section-title;

    opacity: 0.8;
    color: $phill-gold;
    font-size: 50px;
    text-align: right;
    background: transparent;
    float: left;
    width: 45%;
    position: relative;
    top: 50%;
    right: 10%;
}

.section-title-head {
    @extend .section-title;
    
    position: relative;
    bottom: 0px;
}

.section {
    padding: 20px 0 10px 0;
    clear: both;
}

#slideshow {
 /*   margin: 50px auto; */
    position: relative; 
/*    width: 240px; 
    height: 240px; 
    padding: 10px; 
    box-shadow: 0 0 20px rgba(0,0,0,0.4); */
}

#slideshow > div { 
    @extend #unique-box;
    position: absolute; 
    right: 0;
/*    top: 10px; 
    left: 10px; 
    right: 10px; 
    bottom: 10px; */
}

#unique {
    margin: 50px 0 0 0;
}

#unique-box {
/*    background: $phill-gold;*/
    background: white;
    opacity: 0.7;
    font-size: 2vw;
    font-weight: bold;
    width: 35%;
    margin: 0 10% 0 auto;
    padding: 15px;
}

.unique-subtitle {
    text-align: center;
    color: $phill-grn;
    font-size: 30px;
    font-family: 'Open Sans Condensed', 'Poiret One', 'BenchNine', 'Kaushan Script', 'Clicker Script';
    margin: 0 5px 0 5px;
}

.blue-box {
    margin-top: -30px;
    background: white;
    padding: 25px;
    z-index: 3;
}

.blue-box-light {
    @extend .blue-box;
    background: white;
}

.important-link {
    font-size: 25px;
    font-weight: bold;
    padding: 10px;
    float: right;
    clear: both;

}

/* header */

#log-in-out {
    font-size: 2vw;
    color: $phill-gold;
    float: right;
    text-align: right;
    position: absolute;
    top: 0;
    right: 0;

    ul {
	list-style-type: none;
    }

    ul li {
	font-family: 'Shadows Into Light Two';
	padding: 1px 8px 0 0;
    }

    ul li a {
	color: $phill-gold;
    }
}

.head {

    background: white;

}

/* .med-img { */
/*     width: 50%; */
/*     border-radius: 5px; */
/*     margin: 10px; */
/* } */

.large-img {
    width: 100%;
    margin: 0;
    padding: 0;
    top: 0;
    overflow: hidden;
}

.med-img {
    @extend .large-img;

    width: 50%;
}

.nav-pills {
  > li {
    float: left;

    // Links rendered as pills
    > a {
      border-radius: $nav-pills-border-radius;
    }
    + li {
      margin-left: 0px;
    }

    // Active state
    &.active > a {
      &,
      &:hover,
      &:focus {
        color: $nav-pills-active-link-hover-color;
        background-color: $nav-pills-active-link-hover-bg;
      }
    }
  }
}

/* Content */

.container {
    border-radius: 5px;
}

.content-area {
    height: 80%;
    margin: 8.5em 0 0 20em;
}

#content-box {
/*    @extend .box;*/
    @extend .content-area;

    width: 65%;

}

#content-space {
    @extend.content-area;
}

.content {
    z-index: 2;
    width: 100%;
    overflow: hidden;
}

.content-top {
    @extend .content;

    margin-bottom: 40px;
}

.content-high {
    @extend .content;
    
    margin-top: 20%;
}

ul {
    list-style-type: none;
}

#activities {
    margin: 0 auto 0 auto;
    width: 100%;
    height: 700px;
    
    ul {
	list-style-type: none;
	margin: 5px;
    }

    ul li {
	font-size: 6vw;
	background: $phill-gold;
	padding: 15px;
	margin: 5px 15px 5px 15px;
	border-radius: 4px;
	text-align: center;
	display: block;
    }
}


/* footer */

#footer {
    @extend #title;

    border-bottom: none;
    border-top: 2px solid $phill-grn;
    left: 90px;
    position: fixed;
    bottom: 0;
}

/* misc */

.alert {
    z-index: 3;
    margin: 1em 0 1em 1em;
    width: 50%;
    float: right;
}


/*NEW transfer*/

html, body {
    height: 100%;
    width: 100%;
    margin: auto;
    font-family: 'News Cycle';
    background: white;
}

a {
    color: #3f8000;
    text-decoration: none;
    font-weight: bold;

}

a:hover {
    background: #3f8000;
    color: #ffef19;
}

#wrapper {
    height: 100%;
}

#head {
    background-image: url('http://s3.amazonaws.com/PHill/comfy/cms/files/files/000/000/001/original/feeding-patches.jpg');
    background-size: cover;
    background-position: center 45%;
    width: 100%;
    height: 100%;

    top: 0;
    z-index: 0;
}



.sub-title {
    text-align: center;
}

.hi-li {
    background: $phill-gold;
    padding: 15px;
    width: 100%;
}

.hi-li-2 {
    color: $phill-gold;
    font-family: 'Shadows Into Light Two';
}

.hi-li-alert {
    @extend .hi-li;
    
    text-align: center;
    font-size: 2vw;
}

.hi-li-simple {
/*    color: $phill-gold;
    background: $phill-grn;*/
    padding: 0 5px 0 5px;
    margin-bottom: 8px;
}

.logo-box {
    background: $phill-gold;
    border-radius: 2px;
    height: 170px;
    width: 40%;
}

#title {
    background: $phill-gold;
    height: 60px;
    opacity: 0.9;

    text-align: left;
    z-index: 3;
    clear: both;
}

.title-name {
    color: white;
    padding: 0 10px 0 15px;
    font-size: 4.8vw;
    background: $phill-grn;
}

.title-sub-name {
    font-family: 'Shadows Into Light Two';
    text-align: right;
    color: black;
    opacity: 0.8;
    padding: 0 15px 0 0;
    font-size: 3.5vw;
}

.name {
    float: right;
}

.phone {
/*    text-align: center;
    float: right;*/
    padding: 0 6px 6px 6px;
    background: $phill-gold;
    color: black;
    font-size: 25px;
    right: 0px;
    top: 0px;
    position: absolute;
    border-radius: 0 0 0 3px;
    opacity: 0.9;
}

#contact-info {
    font-weight: bold;
    font-size: 25px;
    width: 50%;
    margin: 0 auto 0 auto;
}

#contact-form {
    @extend #contact-info;
    
    padding-left: 10%;
}

#mcd_13 {
    height: 1000px;
    resize: both;
    overflow: auto;
}

.hidden {
    display: none;
}

#menu {
    background: $phill-gold;
    opacity: 0.9;
    padding-bottom: 5px;
    width: 100%;
    position: fixed;
    bottom: 0px;
    z-index: 3;

    ul {
	list-style-type: none;
	padding: 0 0 0 35px;
	margin: 0;
    }

    ul li {
	font-size: 1.44vw;
	display: inline;
	text-align: center;
    }

    a {
        padding: 12px;
    }
}


#quote {
    color: black;
    background: white;
    opacity: 0.5;
    width: 100%;
    height: 29%;
    bottom: 10px;
    padding: 20px 45px 50px 45px; 
    z-index: 3;
    
    position: absolute;
}

.quote-text {
    font-size: 2vw; /*25px;*/
    width: 100%;
    padding: 0 35% 3% 0;
    margin: 0 auto 0 auto;
    text-align: justify;
}

.author {
    font-size: 1.5vw;
    float: right;
    text-align: center;
    margin: auto;
    width: 60%;
    padding: auto;
}

.slide-1 {
    height: 1250px;
    background-image: url('http://s3.amazonaws.com/PHill/comfy/cms/files/files/000/000/024/original/hay-slide.png');
    background-size: cover;
    background-repeat: no-repeat;
    background-position: 0% 70%;
}

#mission-statement {
    @extend #quote;

    height: 200px;
    position: relative;
    top: 10px;
}


#info-column {
    padding-bottom: 3em;

}

.logo {
/*    width: 21%;*/
    width: 9%;
    float: right;
    z-index: 2;
    right: 0px;
    top: 0px;
    position: absolute;
}



.title-logo {
    height: 170px;
    float: left;
    left: 0px;
    top: 0px;
    position: relative;
    background: white;
    margin-right: 15px;
}

.title-logo-fixed {
    @extend .title-logo;
    
    position: fixed;
    height: 85px;
}

#filler {
    width: 100%;
    height: 100%;

}

#spacer {
    height: 2000px;
}

.inner {
    padding-top: 80px;
}

.inner-lower {
    padding-top: 160px;
}

.show {
    @extend #quote;

    font-weight: bold;
    font-size: 3vw;
    padding: 0 auto 0 auto;
    position: static;
}

.extra {
    position: static;
}

.contact-show {
    @extend .show;
    
    font-size: 20px;
    padding: 14px;

}

/*flash*/

.alert-error {
    background-color: #f2dede;
    border-color: #eed3d7;
    color: #b94a48;
    text-align: left;
    font-size: 30px;
}

.alert-alert {
    background-color: #f2dede;
    border-color: #eed3d7;
    color: #b94a48;
    text-align: left;
    font-size: 30px;
}

.alert-success {
    background-color: #dff0d8;
    border-color: #d6e9c6;
    color: #468847;
    text-align: left;
    font-size: 30px;
}

.alert-notice {
    background-color: #dff0d8;
    border-color: #d6e9c6;
    color: #468847;
    text-align: left;
    font-size: 30px;
}

.badge {
    padding: 7px;
    min-width: 20px;
    font-size: 40px;
    color: $phill-grn;
    background: $phill-gold;
}

.badge-volunteer {
    @extend .badge;
    
    color: white;
    background: $phill-grn;
}

.list-group-item {
    font-size: 45px;
    padding: 25px 25px 65px 25px;
    border-width: 3px;
    position: static;
    
    &:hover,
    &:focus {
	.badge-volunteer {
	    color: $phill-grn;
	    background: $phill-gold;
	}
    }
}

.list-group-item-sub {
    @extend .list-group-item;
    
    width: 90%;
    position: static;
}

a.list-group-item-sub {
    color: $phill-grn;
    font-size: 20px;
    font-weight: bold;
    background: white;

    &:hover,
    &:focus {
	background: $phill-blu-light;	
    }

}

#legal {
    background: $phill-blu-light;
    margin: 0 auto 10em auto;
    width: 75%;
    padding: 20px;
}

.activity {
    position: static;
}

.sub {
    position: static;
    float: right;
}

div.list-group-item {
    @extend a.list-group-item
}

/* for 1253px or less */
@media screen and (max-width: 1253px) {

    .title-sub-name {

    }
    
    .title-name {

    }

}

/* for 700px or less */
@media screen and (max-width: 700px) {

    .logo-box {
	width: 100%;
	height: 10%;
    }

    #title {
	height: 100%;
    }

    .title-name {
	width: 70%;
	font-size: 8vw;
	height: 100%;
	padding: 0 0 0 15px;
	margin-top: 10px;
    }

    .title-sub-name {
	margin-top: -65px;
	padding: 0 20px 0 0;
    }

    .quote-text {
	font-size: 4vw;
    }

    .author {
	font-size: 2vw;
    }
    
    #menu {
/*	position: relative;*/
	ul li {
	    font-size: 3vw;
	}
    }

}

